Forgot to end the list.

--- a/doc/mutt_vc_query.1
+++ b/doc/mutt_vc_query.1
@@ -1,6 +1,6 @@
 .\" Process this file with
 .\" groff -man -Tascii mutt_vc_query.1
-.\" $Id$
+.\" $Id: mutt_vc_query.1,v 1.1 2003/05/13 11:23:34 ahsu Exp $
 .Dd May 13, 2003
 .Os
 .Dt MUTT_VC_QUERY 1
@@ -39,6 +39,7 @@ Display the copyright and license.
 .Bl -tag -width "~/.rolo/contacts.vcf" -compact
 .It Pa ~/.rolo/contacts.vcf
 Default data file that mutt_vc_query will query.
+.El
 .Sh SEE ALSO
 .Xr muttrc 5 ,
 .Xr rolo 1
