--- a/README
+++ b/README
@@ -1,10 +1,36 @@
-mutt_vc_query - vCard address query utility for mutt
+mutt_vc_query - vCard query utility for mutt
+release 001
 
 Copyright (C) 2003  Andrew Hsu
 
-Add the following line to your ~/.muttrc file:
+Note: If you are compiling mutt_vc_query from source code, you must
+have had installed the latest libvc package.  In order for the
+compiler to use the libvc libraries, you may have to export the
+following environment variables before you run configure:
+
+   $ export LDFLAGS=$LDFLAGS" -L/usr/local/lib"
+   $ export CFLAGS=$CFLAGS" -I/usr/local/include"
+
+Replace the respective directories above with whatever paths you
+have installed libvc and the header file into.
+
+Once mutt_vc_query has successfully compiled and installed, add the
+following line to your ~/.muttrc file:
 
   set query_command="mutt_vc_query '%s'"
 
 And you will then be able to query email addresses stored in your
 local `contacts.vcf' file from mutt when you use the `Q' command.
+
+Directory contents:
+
+  doc/ ...... Documentation for mutt_vc_query.
+  src/ ...... Source code of mutt_vc_query.
+
+This software is maintained on SourceForge:
+http://rolo.sf.net/
+
+See the `INSTALL' file for building and installation instructions.
+See the `COPYING' file for copying conditions.
+
+Send bugs, questions, or comments to Andrew Hsu <ahsu@users.sf.net>.
