Added more description about how to use mutt_vc_query.

--- a/doc/mutt_vc_query.1
+++ b/doc/mutt_vc_query.1
@@ -1,6 +1,6 @@
 .\" Process this file with
 .\" groff -man -Tascii mutt_vc_query.1
-.\" $Id: mutt_vc_query.1,v 1.3 2003/05/14 02:50:07 ahsu Exp $
+.\" $Id: mutt_vc_query.1,v 1.4 2003/05/14 04:01:23 ahsu Rel $
 .Dd May 14, 2003
 .Os
 .Dt MUTT_VC_QUERY 1
@@ -23,7 +23,12 @@
 .Nm mutt_vc_query
 .Op Fl h
 .Sh DESCRIPTION
-A vCard query utility for mutt.
+A vCard query utility for mutt.  This utility can be used at the
+shell prompt to perform ad-hoc queries, but it is meant to be used
+by mutt's
+.Qo query_command Qc option.  Place the following line in your
+.Qo ~/.muttrc Qc file:
+.Dl set query_command = Qo mutt_vc_query '%s' Qc
 .Pp
 The options are as follows:
 .Bl -tag -offset indent -width "-V"
@@ -48,8 +53,9 @@ Display the copyright and license.
 Default data file that mutt_vc_query will query.
 .El
 .Sh EXAMPLES
-To query for the string ``Hsu'' and have the miscellaneous field
-be populated by the ``NICKNAME'' type:
+To query for the string
+.Qo Hsu Qc and have the miscellaneous field be populated by the type
+.Qo NICKNAME Qc :
 .Dl mutt_vc_query -t NICKNAME Hsu
 .Sh DIAGNOSTICS
 .Ex -std mutt_vc_query
