added -a option to output all email addresses instead of just the preferred address

--- a/doc/mutt_vc_query.1
+++ b/doc/mutt_vc_query.1
@@ -36,6 +36,8 @@ The options are as follows:
 .Bl -tag -offset indent -width "-V"
 .It -e
 Sort the results by email.
+.It -a
+Output all email addresses associated with a contact, instead of just the preferred address.
 .It -f
 Use the datafile to perform the query.
 .It -h
